--- a/frontend/front.html
+++ b/frontend/front.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div id="inventory">
-        <h3>Inventory</h3>
+        <h2>x⸑x GO LEVI GO x⸑x</h2>
+        <h3>Inventory:</h3>
         <div id="inventory-items">Items</div>
         <div>Total Value: <span id="inventory-value"></span></div>
         <div>Gold: <span id="inventory-gold"></span></div>
